--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swingcarsdotnet",
-  "version": "1.2.1",
+  "version": "1.4.0",
   "description": "Swingcars (English)",
   "main": "app.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8"
   }
