--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swingcarsdotnet",
-  "version": "1.9.0",
+  "version": "1.10.5",
   "description": "Swingcars (English)",
   "main": "app.js",
   "scripts": {
@@ -13,7 +13,9 @@
   "author": "Trev Morin <trev@superklok.com> (https://trevmorin.com)",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
@@ -21,6 +23,8 @@
     "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
