--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swingcarsdotnet",
-  "version": "1.10.5",
+  "version": "1.11.0",
   "description": "Swingcars (English)",
   "main": "app.js",
   "scripts": {
@@ -8,11 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/trevmorin/SwingcarsDotNet.git"
+    "url": "https://github.com/Superklok/SwingcarsDotNet.git"
   },
   "author": "Trev Morin <trev@superklok.com> (https://trevmorin.com)",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.11.0",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
@@ -25,6 +26,7 @@
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
