--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "swingcarsdotnet",
-  "version": "1.16.5",
+  "version": "1.22.3",
   "description": "Swingcars (English)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -12,15 +13,22 @@
   },
   "author": "Trev Morin <trev@superklok.com> (https://trevmorin.com)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Superklok/SwingcarsDotNet/issues"
+  },
+  "homepage": "https://swingcars.net",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.11.0",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.3.1",
     "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
@@ -29,6 +37,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "sanitize-html": "^2.3.0"
   }
 }
