--- a/v0.x.x/Dockerfile
+++ b/v0.x.x/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:17.2.0 as base
+FROM node:17.2.0-alpine3.14 as base
 LABEL org.opencontainers.image.vendor="Superklok Labs"
 LABEL org.opencontainers.image.authors="trev@superklok.com"
 LABEL org.opencontainers.image.title="SwingcarsDotNet"
 LABEL org.opencontainers.image.description="Swingcars (English)"
-LABEL org.opencontainers.image.version="0.5.13"
-LABEL org.opencontainers.image.created="2021-12-11"
+LABEL org.opencontainers.image.version="0.5.15"
+LABEL org.opencontainers.image.created="2021-12-12"
 LABEL org.opencontainers.image.url="https://hub.docker.com/r/superklok/swingcarsdotnet"
 LABEL org.opencontainers.image.source="https://github.com/Superklok/SwingcarsDotNet"
 LABEL org.opencontainers.image.licenses="ISC"
@@ -15,7 +15,7 @@ ENV PORT 80
 COPY package*.json ./
 RUN npm i
 COPY . .
-CMD ["node", "app.js"]
+CMD ["npm", "start"]
 
 FROM base as dev
 ENV NODE_ENV=development
