--- a/v0.x.x/package.json
+++ b/v0.x.x/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swingcarsdotnet",
-  "version": "0.5.15",
+  "version": "0.5.19",
   "description": "Swingcars (English)",
   "main": "app.js",
   "scripts": {
@@ -11,19 +11,18 @@
     "type": "git",
     "url": "https://github.com/Superklok/SwingcarsDotNet.git"
   },
-  "author": "Trev Morin <trev@superklok.com> (http://trevmorin.com)",
+  "author": "Trevor Morin <trev@superklok.com> (https://superkloklabs.com)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Superklok/SwingcarsDotNet/issues"
   },
-  "homepage": "http://swingcars.net",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "ejs-mate": "^3.0.0",
-    "express": "^4.17.1"
+    "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "nodemon": "^2.0.15"
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2"
   }
 }
